# Tree

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: tests.yml
benchmark/: Benchmarks.cpp  DriveScanner.cpp  DriveScanner.h  drive_scanner.cpp  drive_scanner.h  file_info.h  main.cpp  scanning_progress.h  scoped_handle.cpp  scoped_handle.h  stopwatch.h  thread_safe_queue.h  win_hack.h
source/: tree.h  tree_utils.h
source/Benchmarks/: Benchmarks.vcxproj  DriveScanner.h
source/Tree/: Tree.vcxproj
source/UnitTests/: UnitTests.vcxproj  unitTests.cpp
tests/: unit_tests.cpp
